Name:             WebViews
Version:          0.0.1
Synopsis:     	  Simplified Proxima Framework for web applications
Category:         Network, Web
License:          AllRightsReserved
Author:           Martijn Schrage
Maintainer:       martijn@oblomov.com
Stability:        experimental
Build-Type:       Simple
Cabal-Version:  >= 1.8
     
Flag piglet
  description:  Build WebViews Piglet
  default:      False       

Flag reservations
  description:  Build WebViews Reservations
  default:      False        

Flag trac
  description:  Build WebViews Trac
  default:      False        

Flag leenclub
  description:  Build WebViews Leenclub
  default:      False       
    
-- Mains are in separate dirs, cannot use Main-is: Main1.hs etc., since scion demands that the module name is the file name (and ghc demands that the main module is called Main)
-- Main is not qualified, since GHC doesn't even allow Module.Main as main.
Library
  hs-source-dirs:   src/lib
  build-depends:  base >=4.5 && <4.6,
                  containers >=0.4 && <0.5,
                  syb >=0.3 && <0.4,
                  network >=2.3 && <2.4,
                  mtl >=2.0 && <2.1,
                  base64-string >=0.2 && <0.3,
                  bytestring >=0.9 && <1.0,
                  html >=1.0 && <1.1,
                  blaze-html >=0.5 && <0.6,
                  blaze-markup >=0.5 && <0.6,
                  happstack-server >=7.0 && <7.1,
                  old-time >=1.1 && <1.2,
                  unix >=2.5 && <2.6,
                  split >=0.1 && <0.2,
                  template-haskell >=2.7 && <2.8
  ghc-options: 
  extensions: ExistentialQuantification RankNTypes DeriveDataTypeable ScopedTypeVariables OverloadedStrings TemplateHaskell, PatternGuards
  exposed-modules: WebViewPrim, WebViewLib, Generics, HtmlLib, Incrementality, Server, Types, BlazeHtml, TemplateHaskell, Utils

Executable Piglet
  Main-is:    Main.hs 
  Build-Depends:  WebViews,
                  base >=4.5 && <4.6,
                  containers >=0.4 && <0.5,
                  syb >=0.3 && <0.4,
                  mtl >=2.0 && <2.1,
                  old-time >=1.1 && <1.2,
                  html >=1.0 && <1.1

  GHC-Options: 
  Extensions: OverloadedStrings
  HS-Source-Dirs:  src/exec/Piglet
  Other-Modules:
  if flag(piglet)
    buildable:  True
  else
    buildable:  False

Executable Reservations
  Main-is:    Main.hs 
  Build-Depends:  WebViews,
                  base >=4.5 && <4.6,
                  containers >=0.4 && <0.5,
                  syb >=0.3 && <0.4,
                  mtl >=2.0 && <2.1,
                  old-time >=1.1 && <1.2,
                  html >=1.0 && <1.1,
                  time >=1.4 && <1.5

  GHC-Options: 
  Extensions: OverloadedStrings
  HS-Source-Dirs:  src/exec/Reservations
  Other-Modules:
  if flag(reservations)
    buildable:  True
  else
    buildable:  False

Executable Trac
  Main-is:    Main.hs 
  Build-Depends:  WebViews,
                  base >=4.5 && <4.6,
                  containers >=0.4 && <0.5,
                  syb >=0.3 && <0.4,
                  mtl >=2.0 && <2.1,
                  old-time >=1.1 && <1.2,
                  html >=1.0 && <1.1,
                  download-curl >=0.1 && <0.2,
                  split >=0.1 && <0.2

  GHC-Options: 
  Extensions: OverloadedStrings
  HS-Source-Dirs:  src/exec/Trac
  Other-Modules:
  if flag(trac)
    buildable:  True
  else
    buildable:  False

Executable Leenclub
  Main-is:    Main.hs 
  Build-Depends:  WebViews,
                  base >=4.5 && <4.6,
                  containers >=0.4 && <0.5,
                  syb >=0.3 && <0.4,
                  mtl >=2.0 && <2.1,
                  old-time >=1.1 && <1.2,
                  html >=1.0 && <1.1,
                  template-haskell >=2.7 && <2.8

  GHC-Options: 
  Extensions: ExistentialQuantification RankNTypes DeriveDataTypeable ScopedTypeVariables OverloadedStrings TemplateHaskell, PatternGuards
  HS-Source-Dirs:  src/exec/Leenclub
  Other-Modules:
  if flag(leenclub)
    buildable:  True
  else
    buildable:  False
