Name:             WebViews
Version:          0.0.1
Synopsis:     	  Simplified Proxima Framework for web applications
Category:         Network, Web
License:          AllRightsReserved
Author:           Martijn Schrage
Maintainer:       martijn@oblomov.com
Stability:        experimental
Build-Type:       Simple
Cabal-Version:  >= 1.8
     
Flag piglet
  description:  Build WebViews Piglet
  default:      False       

Flag reservations
  description:  Build WebViews Reservations
  default:      False        

Flag webforms
  description:  Build WebViews WebForms
  default:      False       

Flag borrowit
  description:  Build WebViews BorrowIt
  default:      False       

Flag importer
  description:  Build BorrowIt Importer
  default:      False       
    
Library
  hs-source-dirs:   src/lib
  build-depends:  base >=4.7 && <5.0,
                  containers >=0.5 && <0.6,
                  syb >=0.5 && <0.6,
                  network >=2.6 && <2.7,
                  mtl >=2.1 && <2.2,
                  base64-string >=0.2 && <0.3,
                  bytestring >=0.10 && <0.11,
                  html >=1.0 && <1.1,
                  blaze-html >=0.8 && <0.9,
                  blaze-markup >=0.7 && <0.8,
                  happstack-server >=7.4 && <7.5,
                  old-time >=1.1 && <1.2,
                  split >=0.2 && <0.3,
                  template-haskell >=2.9 && <2.10,
                  fclabels >=2.0 && <2.1,
                  time >=1.4 && <1.5
  ghc-options: 
  extensions: 
              ExistentialQuantification, 
              OverloadedStrings, 
              PatternGuards, 
              RankNTypes, 
              ScopedTypeVariables, 
              TemplateHaskell

  exposed-modules: 
                   BlazeHtml,
                   Generics,
                   GenericsMap,
                   HtmlLib,
                   Incrementality,
                   ObloUtils,
                   Server,
                   TemplateHaskell,
                   Types,
                   Utils,
                   WebViewLib,
                   WebViewPrim,
                   Xprez
  other-modules:   

Executable piglet
  Main-is:    Main.hs 
  Build-Depends:  WebViews,
                  base >=4.7 && <5.0,
                  containers >=0.5 && <0.6,
                  syb >=0.5 && <0.6,
                  mtl >=2.1 && <2.2,
                  old-time >=1.1 && <1.2,
                  html >=1.0 && <1.1

  GHC-Options: 
  Extensions: OverloadedStrings
  HS-Source-Dirs:  src/exec/Piglet
  Other-Modules:
  if flag(piglet)
    buildable:  True
  else
    buildable:  False

Executable reservations
  Main-is:    Main.hs 
  Build-Depends:  WebViews,
                  base >=4.7 && <5.0,
                  containers >=0.5 && <0.6,
                  syb >=0.5 && <0.6,
                  mtl >=2.1 && <2.2,
                  old-time >=1.1 && <1.2,
                  html >=1.0 && <1.1,
                  time >=1.4 && <1.5

  GHC-Options: 
  Extensions: OverloadedStrings
  HS-Source-Dirs:  src/exec/Reservations
  Other-Modules: Database,
                 ClientWebView,
                 ReservationUtils
  if flag(reservations)
    buildable:  True
  else
    buildable:  False

Executable webforms
  Main-is:    Main.hs 
  Build-Depends:  
                  WebViews,
                  base >=4.7 && <5.0,
                  containers >=0.5 && <0.6,
                  syb >=0.5 && <0.6,
                  mtl >=2.1 && <2.2,
                  old-time >=1.1 && <1.2,
                  html >=1.0 && <1.1,
                  template-haskell >=2.9 && <2.10,
                  fclabels >=2.0 && <2.1,
--                  download-curl,
--                  gps,
                  directory >=1.2 && <1.3


  GHC-Options: 
  Extensions: 
              ExistentialQuantification, 
              OverloadedStrings, 
              PatternGuards, 
              RankNTypes, 
              ScopedTypeVariables, 
              TemplateHaskell
  HS-Source-Dirs:  src/exec/WebForms
  Other-Modules:
                Database,
                WebFormUtils
  if flag(webforms)
    buildable:  True
  else
    buildable:  False

Executable borrowit
  Main-is:    Main.hs 
  Build-Depends:  WebViews,
                  base >=4.7 && <5.0,
                  containers >=0.5 && <0.6,
                  syb >=0.5 && <0.6,
                  mtl >=2.1 && <2.2,
                  old-time >=1.1 && <1.2,
                  html >=1.0 && <1.1,
                  template-haskell >=2.9 && <2.10,
--                  download-curl,
                  fclabels >=2.0 && <2.1
--                  gps

  GHC-Options: 
  Extensions: 
              ExistentialQuantification, 
              OverloadedStrings, 
              PatternGuards, 
              RankNTypes, 
              ScopedTypeVariables, 
              TemplateHaskell
  HS-Source-Dirs:  src/exec/BorrowIt
  Other-Modules:
                Database,
                DatabaseTypes,
                Imported,
                Importer,
                BorrowItUtils,
                WebViewLibExp
  if flag(borrowit)
    buildable:  True
  else
    buildable:  False

Executable importer
  Main-is:    Importer.hs 
  Build-Depends:  
                  WebViews,
                  base >=4.7 && <5.0,
                  containers >=0.5 && <0.6,
                  syb >=0.5 && <0.6,
                  utf8-string >=1 && <1.1,
                  parsec >=3.1 && <3.2,
                  vector >=0.11 && <0.12,
                  unordered-containers >=0.2 && <0.3,
                  curl >=1.3 && <1.4,
                  bytestring >=0.10 && <0.11,
                  aeson >=0.9 && <0.10,
                  attoparsec >=0.13 && <0.14, 
                  fclabels >=2.0 && <2.1,
                  scientific >=0.3 && <0.4
                  
  GHC-Options: 
  Extensions: 
  HS-Source-Dirs:  src/exec/BorrowIt
  Other-Modules:
                DatabaseTypes
  if flag(importer)
    buildable:  True
  else
    buildable:  False
