cabal-version:    3.6
Name:             webviews
Version:          0.0.1
Synopsis:         Simplified Proxima Framework for web applications
Category:         Network, Web
License:          MIT
Author:           Martijn Schrage
Maintainer:       martijn@oblomov.com
Stability:        experimental
Build-Type:       Simple
tested-with:      GHC == 8.10.7

Library
  hs-source-dirs: src/lib
  build-depends:  base,
                  containers,
                  syb,
                  network,
                  mtl,
                  base64-string,
                  bytestring,
                  html,
                  blaze-html,
                  blaze-markup,
                  happstack-server,
                  old-time,
                  split,
                  template-haskell,
                  fclabels,
                  time
  ghc-options:    -Wall
  Default-Language: Haskell2010
  Default-Extensions: 
              ExistentialQuantification, 
              OverloadedStrings, 
              PatternGuards, 
              RankNTypes, 
              ScopedTypeVariables, 
              TemplateHaskell

  exposed-modules: 
                   BlazeHtml,
                   Generics,
                   GenericsMap,
                   HtmlLib,
                   Incrementality,
                   ObloUtils,
                   Server,
                   TemplateHaskell,
                   Types,
                   Utils,
                   WebViewLib,
                   WebViewPrim,
                   Xprez
  other-modules:   

Executable piglet
  Main-is:    Main.hs 
  Build-Depends:  webviews,
                  base,
                  containers,
                  syb,
                  mtl,
                  old-time,
                  html

  ghc-options:    -Wall
  Default-Language: Haskell2010
  Default-Extensions: OverloadedStrings
  HS-Source-Dirs:  src/exec/Piglet
  Other-Modules: Database

Executable reservations
  Main-is:    Main.hs 
  Build-Depends:  webviews,
                  base,
                  containers,
                  syb,
                  mtl,
                  old-time,
                  html,
                  time

  ghc-options:    -Wall
  Default-Language: Haskell2010
  Default-Extensions: OverloadedStrings
  HS-Source-Dirs:  src/exec/Reservations
  Other-Modules: Database,
                 ClientWebView,
                 ReservationUtils

Executable webforms
  Main-is:    Main.hs 
  Build-Depends:  webviews,
                  base,
                  containers,
                  syb,
                  mtl,
                  old-time,
                  html,
                  template-haskell,
                  fclabels,
--                  download-curl,
--                  gps,
                  directory


  ghc-options:    -Wall
  Default-Language: Haskell2010
  Default-Extensions: 
              ExistentialQuantification, 
              OverloadedStrings, 
              PatternGuards, 
              RankNTypes, 
              ScopedTypeVariables, 
              TemplateHaskell
  HS-Source-Dirs:  src/exec/WebForms
  Other-Modules:
                Database,
                WebFormUtils

Executable borrowit
  Main-is:    Main.hs 
  Build-Depends:  webviews,
                  base,
                  containers,
                  syb,
                  mtl,
                  old-time,
                  html,
                  template-haskell,
--                  download-curl,
                  fclabels
--                  gps

  ghc-options:    -Wall
  Default-Language: Haskell2010
  Default-Extensions: 
              ExistentialQuantification, 
              OverloadedStrings, 
              PatternGuards, 
              RankNTypes, 
              ScopedTypeVariables, 
              TemplateHaskell
  HS-Source-Dirs:  src/exec/BorrowIt
  Other-Modules:
                Database,
                DatabaseTypes,
                Imported,
                BorrowItUtils,
                WebViewLibExp

Executable importer
  Main-is:    Importer.hs 
  Build-Depends:  
                  webviews,
                  base,
                  containers,
                  syb,
                  utf8-string,
                  parsec,
                  vector,
                  unordered-containers,
                  curl,
                  bytestring,
                  aeson,
                  attoparsec,
                  fclabels,
                  scientific
                  
  ghc-options:    -Wall
  Default-Language: Haskell2010
  Default-Extensions: 
  HS-Source-Dirs:  src/exec/BorrowIt
  Other-Modules:
                DatabaseTypes
